ky-ha-oj/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oj-microline
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oj-microline
  template:
    metadata:
      labels:
        app: oj-microline
    spec:
      containers:
        - name: oj-microline
          image: registry.kamenet.org/oj-microline:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8001
          livenessProbe:
            httpGet:
              path: /thermostats
              port: 8001
            initialDelaySeconds: 10
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /thermostats
              port: 8001
            initialDelaySeconds: 10
            periodSeconds: 10
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi
