ky-ha-oj/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oj-microline
  namespace: monitoring
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare-prod
spec:
  tls:
    - hosts:
        - oj-microline.kamenet.org
      secretName: oj-microline-tls
  rules:
    - host: oj-microline.kamenet.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: oj-microline
                port:
                  name: http
